--- a/assets/css/newChapitre.css
+++ b/assets/css/newChapitre.css
@@ -27,7 +27,7 @@ section.form_newChapitre .control-label {
 	margin-bottom: 0.3rem; 
 }
 
-section.form_newChapitre #contenue {
+section.form_newChapitre #contenu {
 	margin-top: 4rem;
 	height: 20rem;
 }
