--- a/templates/back/partialCreeChapitre.html
+++ b/templates/back/partialCreeChapitre.html
@@ -7,7 +7,7 @@
         <a href="{{ path }}/admin/">Retour à la liste des chapitres</a>
 
         <section class="form_newChapitre">
-            <form action="" method="POST">
+            <form  method="POST">
                 <div class="form-group">
                     <label for="titre" class="control-label">Titre</label>
                     <input type="text" name="titre" class="form-control" id="titre" placeholder="Titre">
