--- a/templates/back/partialContenueChapitreBack.html
+++ b/templates/back/partialContenueChapitreBack.html
@@ -2,7 +2,7 @@
 		<span class="image main"><img src="{{ path }}/images/pic04.jpg" alt="" /></span>
 
 	<section class="contenu_article">
-		<form action="" method="POST">
+		<form  method="POST">
 			<p> 
 		        <input type="hidden" name="id " value="{{ id }}">
 				<input type="submit" name="Editer_chapitre"    value="Editer">
