--- a/templates/back/partialEditChapitre.html
+++ b/templates/back/partialEditChapitre.html
@@ -16,10 +16,10 @@
                     <label for="resume" class="control-label">Résumé</label>
                     <textarea name="resume" class="form-control" maxlength="255" id="resume" placeholder="Résumé (max : 255 carac)">{{ resume }}</textarea> 
                 </div>
-                <div class="form-group">
+               <!--  <div class="form-group">
                     <label for="slug" class="control-label">Slug</label>
                     <textarea name="slug" class="form-control" maxlength="255" id="slug" placeholder="slug">{{ slug }}</textarea> 
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="contenue" class="control-label"></label>
                     <textarea name="contenu" class="form-control" id="contenu" placeholder="">{{ contenu }}</textarea> 
