--- a/templates/back/partialListeChapitreBack.html
+++ b/templates/back/partialListeChapitreBack.html
@@ -2,7 +2,7 @@
 
 <ul class="listeChapitre">
 	<li>
-	<h3>Chapitre {{ id }} : <a href="{{ path }}/admin/chapitre/{{ slug }}">{{ titre }}</a></h3>
+	<h3><a href="{{ path }}/admin/chapitre/{{ slug }}">{{ titre }}</a></h3>
 			<p>Publié le {{ dateAjout }}</p>
 			<p>{{ resume }}</p>
 	</li>
