--- a/templates/front/partialListeChapitre.html
+++ b/templates/front/partialListeChapitre.html
@@ -3,7 +3,7 @@
 
 <ul class="listeChapitre">
 	<li>
-	<h3>Chapitre {{ id }} : <a href="{{ path }}/chapitre/{{ slug }}">{{ titre }}</a></h3>
+	<h3><a href="{{ path }}/chapitre/{{ slug }}">{{ titre }}</a></h3>
 			<p>Publié le {{ dateAjout }}</p>
 			<p>{{ resume }}</p>
 	</li>
