--- a/templates/back/partialContenueChapitreBack.html
+++ b/templates/back/partialContenueChapitreBack.html
@@ -6,7 +6,7 @@
 			<p> 
  				<a class="button_edit" href="{{ path }}/admin/editChapitre/{{ slug }}"> <input type="button" name="button_edit" value="Editer"> </a>
 				<input type="submit" name="Supprimer_chapitre" value="Supprimer">
-		        <input type="hidden" name="slug " value="{{ slug }}">
+		        <input type="hidden" name="idChapitre" value="{{ id }}">
 			</p>
 		</form>
 
