message d'ajout/supprimer chapitre

--- a/templates/template.html
+++ b/templates/template.html
@@ -37,6 +37,11 @@
 
 		<link rel="stylesheet" href="{{ path }}/assets/css/newChapitre.css" />
 
+		<!-- Css message -->
+
+		<link rel="stylesheet" href="{{ path }}/assets/css/message.css" />
+
+
 
 	</head>
 
