message editChapitre & css listeChapitre

--- a/templates/back/partialEditChapitre.html
+++ b/templates/back/partialEditChapitre.html
@@ -2,7 +2,7 @@
 <div id="main">
     <section class = "new_chapitre">
 
-        <h2>Ajouter un chapitre</h2>
+        <h2>Editer un chapitre</h2>
 
         <a href="{{ path }}/admin/chapitre/{{ slug }}">Retour à la liste des chapitres</a>
 
