--- a/templates/back/partialListeChapitreBack.html
+++ b/templates/back/partialListeChapitreBack.html
@@ -1,8 +1,7 @@
 
 
 <ul class="listeChapitre">
-	<li>
-	<h3><a href="{{ path }}/admin/chapitre/{{ slug }}">{{ titre }}</a></h3>
+	<li><h3><a href="{{ path }}/admin/chapitre/{{ slug }}">{{ titre }}</a></h3>
 			<p>Publié le {{ dateAjout }}</p>
 			<p>{{ resume }}</p>
 	</li>
