--- a/templates/front/partialAccueil.html
+++ b/templates/front/partialAccueil.html
@@ -2,9 +2,11 @@
 
 <!-- Header -->
 <header id="header" class="alt">
-	<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 	<h1>Billet simple pour l'Alaska</h1>
 	<p>Un roman de Jean Forteroche.</p>
+
+	{{ partialFormConnexion }}
+
 </header>
 
 <!-- Nav -->
