--- a/assets/css/listeChapitre.css
+++ b/assets/css/listeChapitre.css
@@ -4,11 +4,18 @@
 .listeChapitre {
 	text-align: left;
 	border-bottom: solid rgb(137,92,142);
-	list-style-type: "\f166";
+	list-style-type: none;
 }
 
 .listeChapitre h3{
 	margin-bottom: 0.1rem;
+}
+.listeChapitre li::before {
+	content:  "\f0da";
+	font-family: 'FontAwesome';
+	position: relative;
+	right: 1.2rem;
+	top:1.83rem;
 }
 
 .listeChapitre  li  p:nth-of-type(1) {
