--- a/templates/back/partialCreeChapitre.html
+++ b/templates/back/partialCreeChapitre.html
@@ -24,7 +24,7 @@
                     <label for="contenue" class="control-label"></label>
                     <textarea name="contenu" class="form-control" id="contenu" placeholder=""></textarea> 
                 </div>
-                <input type="submit" name="Ajouter_chapitre" value="Publié" class="btn btn-primary">
+                <input class="button_chapitre" type="submit" name="Ajouter_chapitre" value="Publié" class="btn btn-primary">
             </form>
         </section>
     </section>
