--- a/templates/back/partialEditChapitre.html
+++ b/templates/back/partialEditChapitre.html
@@ -25,7 +25,7 @@
                     <textarea name="contenu" class="form-control" id="contenu" placeholder="">{{ contenu }}</textarea> 
                 </div>
                 <input type="hidden" name="slug" value="{{ slug }}">
-                <input type="submit" name="Editer_chapitre" value="Editer" class="btn btn-primary">
+                <input class="button_chapitre" type="submit" name="Editer_chapitre" value="Editer" class="btn btn-primary">
             </form>
         </section>
     </section>
