--- a/templates/generateurBouttonFormulaire.html
+++ b/templates/generateurBouttonFormulaire.html
@@ -1,1 +1,1 @@
-<input type="submit" name="{{ texte }}" value="{{ texte }}">
+<input class="moderation_button" type="submit" name="{{ texte }}" value="{{ texte }}">
