try inserer partial formConnexion

--- a/templates/template.html
+++ b/templates/template.html
@@ -13,8 +13,7 @@
 		<!-- Font-awesome -->
 
 		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<!-- 		<script src="https://kit.fontawesome.com/c98d9e0ab5.js" crossorigin="anonymous"></script>
- -->		
+
 		<!-- Css main -->
 
 		<link rel="stylesheet" href="{{ path }}/assets/css/main.css" />
@@ -37,6 +36,11 @@
 		<!-- Css message -->
 
 		<link rel="stylesheet" href="{{ path }}/assets/css/message.css" />
+
+		<!-- Css formulaire de connexion -->
+
+		<link rel="stylesheet" href="{{ path }}/assets/css/formConnexion.css" />
+
 
 
 
@@ -64,6 +68,9 @@
 			<script src="{{ path }}/assets/js/breakpoints.min.js"></script>
 			<script src="{{ path }}/assets/js/util.js"></script>
 			<script src="{{ path }}/assets/js/main.js"></script>
+
+			<script src="{{ path }}/assets/js/formConnexion.js"></script>
+
 
 	</body>
 </html>
