--- a/templates/partialFormConnexion.html
+++ b/templates/partialFormConnexion.html
@@ -1,5 +1,5 @@
 <div class="login-page">
-  <div class="form">
+  <div class="formConnex">
     <!-- <form class="register-form">
       <input type="text" placeholder="name"/>
       <input type="password" placeholder="password"/>
@@ -8,8 +8,8 @@
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form> -->
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
+      <input type="text" placeholder="Identifiant"/>
+      <input type="password" placeholder="Mot de passe"/>
       <input type="button" class="login" name="login" value="connexion">
     </form>
   </div>
