--- a/templates/back/partialCreeChapitre.html
+++ b/templates/back/partialCreeChapitre.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group">
                     <label for="contenue" class="control-label"></label>
-                    <textarea name="contenu" class="form-control" id="contenu" placeholder=""></textarea> 
+                    <textarea name="contenu" class="contenu" id="contenu" placeholder=""></textarea> 
                 </div>
                 <input class="button_chapitre" type="submit" name="Ajouter_chapitre" value="Publié" class="btn btn-primary">
             </form>
