--- a/templates/back/partialEditChapitre.html
+++ b/templates/back/partialEditChapitre.html
@@ -22,7 +22,7 @@
                 </div> -->
                 <div class="form-group">
                     <label for="contenue" class="control-label"></label>
-                    <textarea name="contenu" class="form-control" id="contenu" placeholder="">{{ contenu }}</textarea> 
+                    <textarea name="contenu" class="contenu" id="contenu" placeholder="">{{ contenu }}</textarea> 
                 </div>
                 <input type="hidden" name="slug" value="{{ slug }}">
                 <input class="button_chapitre" type="submit" name="Editer_chapitre" value="Editer" class="btn btn-primary">
