--- a/templates/back/partialCreeChapitre.html
+++ b/templates/back/partialCreeChapitre.html
@@ -1,5 +1,5 @@
 
-<div id="main">
+<div id="main" class="main_newChapitre">
     <section class = "new_chapitre">
 
         <h2>Ajouter un chapitre</h2>
