--- a/templates/template.html
+++ b/templates/template.html
@@ -42,6 +42,11 @@
 
 		<link rel="stylesheet" href="{{ path }}/assets/css/formConnexion.css" />
 
+		<!-- Css page404 -->
+
+		<link rel="stylesheet" href="{{ path }}/assets/css/page404.css" />
+
+
 		<script src="https://cdn.tiny.cloud/1/i1hdujtpo40ymbyygx2vg6udo17cz468sdgir6x93awvmqu8/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 		<script>tinymce.init({mode:"specific_textareas",
 							  editor_selector: "contenu"});</script>
