--- a/templates/front/partialAccueil.html
+++ b/templates/front/partialAccueil.html
@@ -4,9 +4,6 @@
 <header id="header" class="alt">
 	<h1>Billet simple pour l'Alaska</h1>
 	<p>Un roman de Jean Forteroche.</p>
-
-	{{ partialFormConnexion }}
-
 </header>
 
 <!-- Nav -->
@@ -45,6 +42,8 @@
 				{{ partialListeChapitre }}
 
 		</section>
+
+		<div class="connexion"><a href="{{ path }}/connexion">Connexion administration</a></div>
 </div>
 
 <!-- Footer -->
