--- a/templates/partialError404.html
+++ b/templates/partialError404.html
@@ -1,4 +1,4 @@
 
 <div class= error404>
-	<img src="{{ path }}/assets/css/images/img_error404.jpg" alt="">
+	<img src="{{ path }}/assets/css/images/img_error404(2).png" alt="">
 </div>
