--- a/assets/css/page404.css
+++ b/assets/css/page404.css
@@ -1,9 +1,19 @@
 
 
 .error404 {
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	display: table-cell;
-	vertical-align: middle;
+  
+  position: absolute;
+  margin: 0 auto;
+  width: 500px;
+  height: 500px;
+  border: 1px #aaa solid; 
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.error404 img {
+	
+	width: 500px;
+	height: 500px;
 }
