--- a/templates/back/partialCreeChapitre.html
+++ b/templates/back/partialCreeChapitre.html
@@ -40,8 +40,8 @@
                             target.value = slug;
                         }
                     </script>
-                    <slugify onclick="event.stopPropagation();generateSlug(document.getElementById('titre').value, document.getElementById('slug'))">générer slug</slugify>
-                    <textarea name="slug" class="form-control" maxlength="255" id="slug" placeholder="slug"></textarea> 
+                    <slugify onclick="event.stopPropagation();generateSlug(document.getElementById('titre').value, document.getElementById('slug'))"><button>Générer le slug</button></slugify>
+                    <textarea name="slug" class="form-control" maxlength="255" id="slug" placeholder="Slug"></textarea> 
                 </div>
                 <div class="form-group">
                     <label for="contenue" class="control-label"></label>
