--- a/templates/front/partialAccueil.html
+++ b/templates/front/partialAccueil.html
@@ -43,7 +43,7 @@
 
 		</section>
 
-		<div class="connexion"><a href="{{ path }}/connexion">Connexion administration</a></div>
+		<div class="connexion"><a href="{{ path }}/admin">Connexion administration</a></div>
 </div>
 
 <!-- Footer -->
