--- a/templates/partialFooter.html
+++ b/templates/partialFooter.html
@@ -6,7 +6,7 @@
 	<section>
 		<h2>Contact</h2>
 		<dl class="alt">
-			<dt>Addresse</dt>
+			<dt>Adresse</dt>
 			<dd>19 rue Boyer, 75020 Paris</dd>
 			<dt>Téléphone</dt>
 			<dd>01.23.45.67.89</dd>
