--- a/templates/partialFormConnexion.html
+++ b/templates/partialFormConnexion.html
@@ -12,3 +12,6 @@
 		<input type="submit" name="connexion" value="Connexion" class="btn_connexion">
 	</form>
 </div>
+<script type="text/javascript">
+	document.body.className="fullscreen";
+</script>
