--- a/templates/back/messageDeleteChapitre.html
+++ b/templates/back/messageDeleteChapitre.html
@@ -4,3 +4,6 @@
 		<a href="../">Retour à la liste des chapitres</a>
 	</div>
 </div>
+<script type="text/javascript">
+  document.body.className="fullscreen";
+</script>
