--- a/templates/back/messageEditChapitre.html
+++ b/templates/back/messageEditChapitre.html
@@ -5,3 +5,6 @@
 		<a href="../">Retour à la liste des chapitres</a>  
 	</div>
 </div>
+<script type="text/javascript">
+  document.body.className="fullscreen";
+</script>
