--- a/templates/partialError404.html
+++ b/templates/partialError404.html
@@ -2,3 +2,6 @@
 <div class= error404>
 	<img src="{{ path }}/assets/css/images/img_error404(2).png" alt="">
 </div>
+<script type="text/javascript">
+	document.body.className="fullscreen";
+</script>
