--- a/templates/back/partialFormConnexion.html
+++ b/templates/back/partialFormConnexion.html
@@ -1,11 +1,11 @@
 <div id="main" class="formConnexion">
-	<form action="" method="POST">
+	<form method="POST">
 		<div>
-			<label for="name">Identifiant</label>
-			<input type="text" name="identifiant">
+			<label for="identifiant">Identifiant</label>
+			<input type="text" name="identifiant" id="identifiant">
 
-			<label for="name">Mot de passe</label>
-			<input type="password" name="mdp">
+			<label for="mdp">Mot de passe</label>
+			<input type="password" name="mdp" id="mdp">
 			
 		</div> 
 
