--- a/templates/front/partialAccueil.html
+++ b/templates/front/partialAccueil.html
@@ -29,7 +29,7 @@
 					Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
 				
 				</div>
-				<span class="image"><img src="{{ path }}/images/alaska_ocean_and_snow_mountains.jpg" alt="" /></span>
+				<span class="image"><img src="{{ path }}/images/alaska_ocean_and_snow_mountains.jpg" alt="Les montagnes d'Alaska" /></span>
 			</div>
 		</section>
 
