--- a/templates/partialCommentaire.html
+++ b/templates/partialCommentaire.html
@@ -9,7 +9,9 @@
                         <div class="row">
                             <div class="form-group col-xs-12 col-sm-9 col-lg-10">
                                 <input type="hidden" name="idChapitre" value="{{ idChapitre }}">
+                                <label for="auteurCommentaire"></label>
                                 <input type="text" class="form-control" id="auteurCommentaire" name="auteurCommentaire"  placeholder="Votre pseudo"/> 
+                                <label for="messageCommentaire"></label>
                                 <textarea class="form-control" id="messageCommentaire" name="messageCommentaire"  placeholder="Votre message" required=""></textarea>
 
                             </div>
