msg d'erreur formulaire de connexion

--- a/templates/back/partialFormConnexion.html
+++ b/templates/back/partialFormConnexion.html
@@ -1,5 +1,9 @@
 <div id="main" class="formConnexion">
 	<form method="POST">
+			
+		<div class="messageErreurConnexion">{{ messageErreur }}
+		</div>	
+
 		<div>
 			<label for="identifiant">Identifiant</label>
 			<input type="text" name="identifiant" id="identifiant">
