--- a/assets/css/formConnexion.css
+++ b/assets/css/formConnexion.css
@@ -5,7 +5,7 @@ body.fullscreen {
 }
 
 .formConnexion {
-	padding: 3rem;
+	padding: 3rem 3rem 0.5rem 3rem;
 	margin-top: 5rem;
 	margin-bottom: 5rem;
 	width: 40%;
@@ -28,6 +28,16 @@ body.fullscreen {
 */	margin-left: auto;
 	margin-right: auto;
 	margin-top: 3rem;
+}
+
+.messageErreurConnexion {
+	/*background-color: rgb(220,20,60);
+	border: solid rgb(220,20,60) 1px;
+	border-radius: 10px;
+	padding: 5px;*/
+	text-align: center;
+	margin-bottom: .1rem;
+
 }
 
 
